# ml_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: Experiment_BVP_Only_FINAL.joblib  best_model.joblib  metadata.json  metrics.json
public/: model_result_preview.csv  prediction_latest.json  predictions.json  predictions.jsonl
scripts/: train.py
src/ml_project/: config.py  data.py  features.py  train.py  wesad_parser.py
src/ml_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_imports.py
