[project]
name = "ml_project"
version = "0.1.0"
description = "Reproducible ML project scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "scikit-learn",
  "joblib",
  "jupyter",
  "jupytext",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
